objects/BMCServiceDesk__BMC_AccessPoint__c.object
<CustomObject>
    <description>BMC_AccessPoint. CMDB Abstract class that defines communication endpoints in your IT environment. The BMC_AccessPoint class groups together access-point related classes. An access point represents the ability to use or invoke a service. This characteristic is further defined by BMC_ProtocolEndpoint, the only direct subclass of BMC_AccessPoint.  By definition, abstract classes cannot hold any instances. You use them only in special cases to organize subclasses so that you have the flexibility to add a layer of organization without a database join. Therefore, you might use subclasses such as IP addresses, MAC addresses, IPX addresses, and so forth. Instances of the BMC_AccessPoint class are related to a system through a BMC_HostedAccessPoint dependency relationship.  This class corresponds to the DMTF class CIM_ServiceAccessPoint.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemClassId__c</fullName>
        <inlineHelpText>Use this field to enter the class of the system where the endpoint resides. This value is automatically propagated from the related instance.</inlineHelpText>
        <label>System Class ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemName__c</fullName>
        <inlineHelpText>Use this field to enter the name of the system where the endpoint resides. This value is automatically propagated from the related instance.</inlineHelpText>
        <label>System Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Access Point</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__InstanceID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_AccessPoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>